<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="group_download"
        android:title="@string/settings_group_download">

        <de.robv.android.xposed.installer.widget.ListPreferenceSummaryFix
            android:defaultValue="stable"
            android:entries="@array/release_type_texts"
            android:entryValues="@array/release_type_values"
            android:key="release_type_global"
            android:summary="%s"
            android:title="@string/settings_release_type" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_experimental"
        android:title="@string/settings_group_experimental">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disable_resources"
            android:persistent="false"
            android:summary="@string/settings_disable_resources_summary"
            android:title="@string/settings_disable_resources"/>

        <!--
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="performance_experiment"
                    android:summary="@string/settings_performance_experiment_summary"
                    android:title="@string/settings_performance_experiment" />
        -->
    </PreferenceCategory>
</PreferenceScreen>
